--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   window_manager: ^0.3.8
   sidebarx: ^0.16.3
+  sqflite_common_ffi: ^2.3.3
 
 dev_dependencies:
   flutter_test:
